pgcenter (devel) unstable; urgency=low
  * add 'apk' package format
  * use '/usr/bin' instead of '/usr/local/bin' when installing from rpm/deb packages
  * top: add filesystem stats screen
  * top: expose version info in help screen
  * extend tables sizes statistics: add info about tables metadata and TOASTs
  * fix problem when pg_stat_statements cannot be found when installed in other than 'public' schema
  * top: when formatting queries for sys/all tables or indexes avoid silent continue if query templating failed
  * top: add error handling to menu drawing routines
  * when printing stat, return error in case of zero or negative column width calculated
  * simplify regexp for extracting query text from pg_stat_activity
  * top: fix silent wreck of terminal when working with menus

pgcenter (0.8.0) unstable; urgency=low
  * add accounting of parallel workers stats when profiling (available only for PG13 and newer)
  * add support of pg_stat_statements WAL usage statistics
  * add support for pg_stat_progress_basebackup statistics
  * add support for pg_stat_progress_analyze statistics
  * fix connection problems related to absence needed conn options which required when using 'simple' protocol
  * update Go version up to 1.16
  * top: fix hangs on statistics writing when UI fails
  * use alpine as a base image for Docker
  * fix problems related to run using Docker
  * minor code improvements, comments

pgcenter (0.7.0) unstable; urgency=low
  * add golangci-lint, fix issues
  * add gosec, fix issues
  * add testing, major code and internal design refactoring

pgcenter (0.6.6) unstable; urgency=low
  * adjust query for getting statements rate, accordingly to v13.
  * adjust query for getting statements timings accordingly to v13. Exec and Plan times from pg_stat_statements are accounted together.

pgcenter (0.6.5) unstable; urgency=low
  * nothing important, removed old code, small refactoring and bugfixes
  * top: fix 'G' hotkey when building query report
